--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: c
 
 before_install:
-- travis_retry sudo apt-get install -qq python-sphinx
+- travis_retry sudo apt-get install -qq python-sphinx 
 
 script:
   - autoreconf --force --verbose --install
   - ./configure --prefix=/opt/rsyslog --build=x86_64-pc-linux-gnu --host=x86_64-pc-linux-gnu --mandir=/usr/share/man --infodir=/usr/share/info --datadir=/usr/share --sysconfdir=/etc --localstatedir=/var/lib --disable-dependency-tracking --disable-silent-rules --libdir=/usr/lib64 --disable-journal
   - make && make distcheck
   - cat config.log
+  - cat configure.ac
