travis: add check for codestyle

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,6 @@ addons:
     - python-docutils
 
 script:
+  - CI/check_codestyle.sh
   - export CFLAGS="-Wall"
   - autoreconf -fvi && ./configure && make distcheck
