--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ Makefile
 Makefile.in
 aclocal.m4
 autom4te.cache
+compile
+config.cache
 config.guess
 config.h
 config.h.in
@@ -10,6 +12,7 @@ config.status
 config.sub
 configure
 depcomp
+INSTALL
 install-sh
 libtool
 ltmain.sh
